Updates to index, top navigation, lessons table structure

--- a/lessons.html
+++ b/lessons.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title : Archive
-header : Post Archive
+title : Lessons
+header : 
 group: navigation
 ---
 {% include JB/setup %}
