added lessons table, updated top nav pages

--- a/lessons.html
+++ b/lessons.html
@@ -9,3 +9,36 @@ group: navigation
 
 {% assign posts_collate = site.posts %}
 {% include JB/posts_collate %}
+
+<table>
+  <tr>
+    <td>Setup QGIS, iPlant, iRods</td>
+    <td><a href="http://spatialcarpentry.github.io/setup/">Lesson</a></td>
+    <td></td>
+  <tr>
+    <td>Basics - Intro to Spatial Data</td>
+    <td><a href="http://spatialcarpentry.github.io/basics/">Lesson</a></td>
+    <td><a href="http://spatialcarpentry.github.io/basics-pres/">Presentation</a></td>
+  </tr>
+  <tr>
+    <td>Data Collection</td>
+    <td><a href="http://spatialcarpentry.github.io/data-collection/">Lesson</a></td>
+    <td><a href="http://spatialcarpentry.github.io/data-collection-pres/">Presentation</a></td>
+  </tr>
+  <tr>
+    <td>Data Hygiene</td>
+    <td><a href="http://spatialcarpentry.github.io/data-hygiene/">Lesson</a></td>
+    <td><a href="http://spatialcarpentry.github.io/data-hygiene-pres/">Presentation</a></td>
+  </tr>
+  <tr>
+    <td>Spatial Analysis</td>
+    <td><a href="http://spatialcarpentry.github.io/spatial-analysis/">Lesson</a></td>
+    <td><a href="http://spatialcarpentry.github.io/spatial-analysis-pres/">Presentation</a></td>
+  </tr>
+  <tr>
+    <td>Cartography</a>
+    <td><a href="http://spatialcarpentry.github.io/cartography/">Lesson</a></td>
+    <td><a href="http://spatialcarpentry.github.io/cartography-pres/">Presentation</a></td>
+  </tr>
+</table>
+
