--- a/about.html
+++ b/about.html
@@ -7,4 +7,12 @@ group: navigation
 ---
 {% include JB/setup %}
 
-<h1>About page</h1>
+
+
+<h3>Collaborators</h3>
+
+<ul>
+  <li><a href="http://www.iplantcollaborative.org/">iPlant Collaborative</a></li>
+  <li>Nathan Casler - University of Arizona</li>
+  <li>Daniel Guaderrama - University of Arizona</li>
+</ul>
