--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ group: navigation
 <h3>Collaborators</h3>
 
 <ul>
-  <li><a href="http://www.iplantcollaborative.org/">iPlant Collaborative</a></li>
+  <li><a href="http://www.iplantcollaborative.org/" target="_blank">iPlant Collaborative</a></li>
   <li>Nathan Casler - University of Arizona</li>
   <li>Daniel Guaderrama - University of Arizona</li>
 </ul>
