--- a/about.html
+++ b/about.html
@@ -7,12 +7,16 @@ group: navigation
 ---
 {% include JB/setup %}
 
+<h3>Sponsored by:</h3>
+<ul>
+  <li><a href="http://www.iplantcollaborative.org/" target="_blank">iPlant Collaborative</a></li>
+  <li><a href="http://aegis.webhost.uits.arizona.edu/" target="_blank">Arizona Environmental Grid Infrastructure Service (AEGIS)</a></li>
+</ul>
 
 
 <h3>Collaborators</h3>
 
 <ul>
-  <li><a href="http://www.iplantcollaborative.org/" target="_blank">iPlant Collaborative</a></li>
-  <li>Nathan Casler - University of Arizona</li>
+    <li>Nathan Casler - University of Arizona</li>
   <li>Daniel Guaderrama - University of Arizona</li>
 </ul>
