--- a/workshops.html
+++ b/workshops.html
@@ -11,10 +11,12 @@ group: navigation
     <th>Facility</th>
     <th>Date</th>
     <th>Location</th>
+    <th> </th>
   </tr>
   <tr>
-    <td><a href="http://www.bio5.org/" target="_blank">BIO5 Facility, University of Arizona</a></td>
+    <td><a href="http://www.bio5.org/" target="_blank">Integrated Learning Center RM #119, University of Arizona</a></td>
     <td>May 20, 2015</td>
     <td><a href="https://www.google.com/maps/place/32%C2%B014%2716.5%22N+110%C2%B056%2751.3%22W/@32.237925,-110.947583,19z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0" target="_blank">32.237925, -110.947583</a></td>
-  </td>
+    <td><a href="https://www.eventbrite.com/e/spatial-data-workshop-tickets-16503338931" target="_blank">Register here</a></td>
+  </tr>
 </table>
