Updated lesson tilte

--- a/lessons.html
+++ b/lessons.html
@@ -12,11 +12,11 @@ group: navigation
 
 <table>
   <tr>
-    <td>Setup QGIS, iPlant, iRods</td>
+    <td>Setup</td>
     <td><a href="http://spatialcarpentry.github.io/setup/">Lesson</a></td>
     <td></td>
   <tr>
-    <td>Basics - Intro to Spatial Data</td>
+    <td>Spatial Data Basics</td>
     <td><a href="http://spatialcarpentry.github.io/basics/">Lesson</a></td>
     <td><a href="http://spatialcarpentry.github.io/basics-pres/">Presentation</a></td>
   </tr>
