--- a/lessons.html
+++ b/lessons.html
@@ -40,10 +40,16 @@ group: navigation
     <td><a href="http://spatialcarpentry.github.io/cartography/">Lesson</a></td>
     <td><a href="http://spatialcarpentry.github.io/cartography-pres/">Presentation</a></td>
   </tr>
-<!--  <tr>
-      <td>Data Sharing</td>
-      <td><a href="http://spatialcarpentry.github.io/data-sharing/">Lesson</a></td>
-      <td><a href="http://spatialcarpentry.github.io/data-sharing-pres/">Presentation</a></td>
-  </tr>-->
+  <tr>
+    <td>Color Theory</td>
+    <td>&nbsp;</td>
+    <td><a href="http://spatialcarpentry.github.io/color-theory-pres/">Presentation</a></td>
+  </tr>
+  <tr>
+    <td>Data Sharing</td>
+    <td>&nbsp;</td>
+    <td><a href="http://spatialcarpentry.github.io/color-theory-pres/">Presentation</a></td>
+  </tr>
+
 </table>
 
